Updated package and gitignore

--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "ense",
   "version": "1.0.0",
   "description": "A simple web framework which is for modern browsers and written with modern and future code.",
-  "author": "Nathan Smith <nathansmithdeveloper@gmail.com>"
+  "author": "Nathan Smith <nathansmithdeveloper@gmail.com>",
+  "repository" : { 
+    "type" : "git", 
+    "url" : "https://github.com/nathan1989/ense.git"
+  }
 }
