--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.5",
   "description": "A simple web framework which is for modern browsers and written with modern and future code.",
   "author": "Nathan Smith <nathansmithdeveloper@gmail.com>",
+  "license": "",
+  "main": "scripts/ense.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nathan1989/ense.git"
+    "url": "git://github.com/nathan1989/ense.git"
   }
 }
